end point para acceso a mensajes
