# routers/rutas.go
@@ -16,6 +16,7 @@ func SetupRouter(r *gin.Engine) {
 	r.POST("/gestion/area-modalidad", controllers.GetRecordsCountByAreaAndModalidad)
 	r.POST("/gestion/user", controllers.GetRecordsByUserAndPeriod)
     r.POST("/gestion/user-area-modalidad", controllers.GetRecordsCountByUserAndModalidad)
+	r.POST("/generate-token", controllers.GenerateToken) 
 			
 
 	// Endpoints protegidos con JWT
@@ -29,6 +30,7 @@ func SetupRouter(r *gin.Engine) {
 		protected.DELETE("/users/:id", middleware.RoleRequired("admin"), controllers.DeleteUser)
 		protected.GET("/users/:id/otp-setup", middleware.RoleRequired("admin"), controllers.SetupOTP)
 		protected.PUT("/users/:id/password", middleware.RoleRequired("admin"), controllers.UpdatePassword)
+		
 
 		// CRUD para Caso
 		protected.POST("/casos", middleware.RoleRequired("admin", "superuser", "user"), controllers.CreateCaso)
@@ -110,13 +112,13 @@ func SetupRouter(r *gin.Engine) {
 
 
 		// CRUD  para mensajes
-		protected.POST("/mensajes/", middleware.RoleRequired("admin", "superuser", "analyst", "user"),  controllers.CreateMensaje)
 		protected.GET("/mensajes/:id", middleware.RoleRequired("admin", "superuser", "analyst"), controllers.GetMensaje)
 		protected.PUT("/mensajes/:id", middleware.RoleRequired("admin"), middleware.AreaCheck(), controllers.UpdateMensaje)
 		protected.DELETE("/mensajes/:id", middleware.RoleRequired("admin"), middleware.AreaCheck(), controllers.DeleteMensaje)
 		protected.GET("/mensajes/", middleware.RoleRequired("admin", "superuser", "analyst"),  controllers.GetMensajes)
 		protected.GET("/mensajes/filter", middleware.RoleRequired("admin", "superuser", "analyst"), controllers.FilterMensajes)
 		protected.PUT("/mensajes/:id/procesado", middleware.RoleRequired("admin", "superuser", "analyst"), controllers.UpdateMensajeStatus)
+		protected.POST("/mensajes/",  middleware.RoleRequired("admin", "superuser", "analyst", "user"), controllers.CreateMensaje)
 
 		// CRUD para Redes
 		protected.POST("/redes", middleware.RoleRequired("admin", "superuser", "user"), controllers.CreateRedes)
